# tulgatech-ai

./: .gitignore  DEV_NOTES.md  NOTICE.md  PHASE_2_PROGRESS.md  PHASE_MASTER_PLAN.md  README.md  README_old.md  SESSION_2_SUMMARY.md  debug_cluster_report.py  debug_cluster_spaces.py  debug_dxf_types.py  debug_insert_clusters_merge.py  debug_inserts_bbox.py  pyproject.toml  requirements.txt  setup.py  test_walls.py
config/: __init__.py  assumptions.json
data/prices/: custom_prices.json
docs/: DOCUMENTATION.md
engine/: cluster_detector.py  cluster_spaces.py  cost_estimator.py  orchestrator.py  project_planner.py  project_reader.py  quantity_models.py  quantity_takeoff_engine.py
engine/reporting/: __init__.py  formats.py  generator.py
parser/: project_reader.py
reports/: cost_ornek_proje_3.json  metraj_ornek_proje_3.json  ornek_proje_3_20260211_143234.json  plan_ornek_proje_3.json
src/tulgatech/cli/: main.py
tests/: run_all_tests.py  test_api_server.py  test_area_calculator.py  test_basic.py  test_cli.py  test_cluster_detector.py  test_cost_breakdown_analyzer.py  test_door_window_detector.py  test_dxf_loader.py  test_frame_detector.py  test_integration_dxf.py  test_layer_profiler.py  test_material_estimator.py  test_model_3d_generator.py  test_normalizer.py  test_orchestrator.py  test_ornek_proje_3.py  test_pdf_exporter.py  test_report_generator.py  test_room_detector.py  test_scale_manager.py  test_schedule_optimizer.py  test_segment_extractor.py  test_topology_analyzer.py  test_wall_detector.py  test_web_dashboard.py
tools/: poly_area_stats.py  run_demo.py
(+178 files in other folders)
